# devops-with-kubernetes

./: README.md
.zed/: settings.json
apps/log-output/: Makefile  README.md
apps/log-output/manifests/: deployment.yaml  ingress.yaml  service.yaml
apps/log-output/server/: Dockerfile  pyproject.toml
apps/log-output/server/app/: main.py
apps/log-output/writer/: Dockerfile  main.py
apps/log_output/: Dockerfile  README.md  main.py  pyproject.toml
apps/log_output/app/: main.py
apps/log_output/manifests/: deployment.yaml  ingress.yaml  service.yaml
apps/ping-pong/: Makefile  README.md  pyproject.toml
apps/ping-pong/app/: main.py
apps/ping-pong/manifests/: deployment.yaml  ingress.yaml  service.yaml
apps/todo/: Dockerfile  Makefile  README.md  pyproject.toml
apps/todo/app/: main.py
apps/todo/manifests/: deployment-app.yaml  deployment-backend.yaml  deployment.yaml  ingress.yaml  service-app.yaml  service-backend.yaml
apps/todo/templates/: index.html
apps/todo/todo-app/: .dockerignore  Dockerfile  pyproject.toml
apps/todo/todo-app/app/: main.py
apps/todo/todo-app/manifests/: service.yaml
apps/todo/todo-app/templates/: index.html
apps/todo/todo-backend/: pyproject.toml
apps/todo/todo-backend/app/: main.py
manifests/: persistentvolume-exercises.yaml  persistentvolume-project.yaml  persistentvolume.yaml  persistentvolumeclaim-exercises.yaml  persistentvolumeclaim-project.yaml  persistentvolumeclaim.yaml
